--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="board">
     </div> 
 
-    <script src="//code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="index.js"></script>
 
 
